# beeper-go-sdk

./: .gitignore  CONTRIBUTING.md  GOLANG_FEATURES.md  LICENSE  Makefile  README.md  TEST_RESULTS.md  client.go  client_test.go  config.go  errors.go  go.mod  pagination.go  utils.go  version.go
beeper-rust-sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SUMMARY.md
beeper-rust-sdk/.github/workflows/: ci.yml
beeper-rust-sdk/examples/: advanced.rs  basic.rs
beeper-rust-sdk/src/: client.rs  config.rs  error.rs  lib.rs  utils.rs  version.rs
beeper-rust-sdk/src/resources/: accounts.rs  app.rs  chats.rs  contacts.rs  messages.rs  mod.rs  shared.rs  token.rs
beeper-rust-sdk/tests/: integration_tests.rs
cmd/archive-chats/: FEATURES.md  QUICKSTART.md  README.md  demo.sh  main.go  main_test.go
cmd/testapp/: README.md  main.go
cmd/webchat/: README.md  main.go
cmd/webchat/ui/: app.js  index.html  styles.css
examples/advanced/: main.go
examples/basic/: main.go
internal/: pagination.go  retry.go  utils.go
resources/: accounts.go  app.go  chats.go  chats_test.go  contacts.go  messages.go  messages_test.go  shared.go  token.go
