[package]
name = "beeper-desktop-api"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Beeper Desktop API"
license = "MIT"
repository = "https://github.com/cameronaaron/beeper-go-sdk"
documentation = "https://docs.rs/beeper-desktop-api"
keywords = ["beeper", "api", "sdk", "chat", "messaging"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
base64 = "0.21"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tracing-test = "0.2"
rstest = "0.18"
tracing-subscriber = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[bin]]
name = "archive-chats"
path = "src/bin/archive_chats.rs"
required-features = ["binaries"]

[[bin]]
name = "testapp" 
path = "src/bin/testapp.rs"
required-features = ["binaries"]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
binaries = ["tracing-subscriber"]